Course consistent font styling, update insta logo name, rearrange footer order - insta first

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -51,6 +51,7 @@
                 kropp, bygga upp styrka och skapa en stabil grund för fortsatt träning – utan press
                 eller prestation.
                 Träningen är anpassad efter mammakroppen och har fokus på:
+            </p>
             <ul class=course-description-meta">
                 <li>bäckenbotten och core</li>
                 <li>hållning och kroppskännedom</li>
@@ -67,7 +68,7 @@
                 <li><strong>Start:</strong> 5 mars</li>
                 <li><strong>Längd:</strong> 8 veckor</li>
                 <li><strong>Dag & Tid:</strong> Torsdagar kl. 10.00-11.00</li>
-                <li><strong>Plats:</strong> Eriksberg</li>
+                <li><strong>Plats:</strong> Vila och Värme - yogastudio. Säterigatan 29, Eriksberg</li>
                 <li><strong>Bebisar:</strong> Varmt välkomna</li>
                 <li><strong>Förkunskapskrav:</strong> Efterkontroll genomförd</li>
             </ul>
@@ -79,7 +80,7 @@
             </p>
 
             <p>
-                💛 Early Bird-erbjudande (t.o.m. 10 februari)
+                💛 <em><strong>Early Bird-erbjudande (t.o.m. 10 februari)</strong></em>
                 Som en extra omtanke till dig som bokar tidigt ingår:
             </p>
             <ul class="early-bird-meta">
@@ -87,7 +88,7 @@
                 <li>Goodiebag med produkter till ett värde av ca 700 kr</li>
             </ul>
             <p>
-            Early bird-pris: 1 795 kr. Ordinarie pris: 2 295 kr
+                Early bird-pris: <strong>1 795 kr</strong>. Ordinarie pris: <em>2 295 kr</em>
             Platserna är begränsade för att kunna ge varje mamma en trygg och personlig upplevelse.
             </p>
         </div>
@@ -168,11 +169,6 @@
 </main>
 
 <footer class="footer-grid">
-
-    <a href="mailto:info@mammamind.se" class="footer-email">
-        info@mammamind.se
-    </a>
-
     <a
             href="https://www.instagram.com/tara_mammamind/"
             target="_blank"
@@ -181,11 +177,15 @@
             aria-label="Följ MammaMind på Instagram"
     >
         <img
-                src="/assets/svg/instagram-logo-facebook-2-svgrepo-com.svg"
+                src="/assets/svg/instagram-logo.svg"
                 alt=""
                 class="social-icon"
         />
         Instagram
+    </a>
+
+    <a href="mailto:info@mammamind.se" class="footer-email">
+        info@mammamind.se
     </a>
 
     <a href="/subpages/privacy.html" class="footer-privacy">
@@ -195,7 +195,6 @@
     <p class="footer-copy">
         © 2026 · MammaMind
     </p>
-
 </footer>
 </body>
 </html>
