--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <div class="contact">
         <h2>Kontakta mig</h2>
         <p>
-          Hör gärna av dig via mail eler Instagram om du har frågor eller klicka på Mer info om du
+          Hör gärna av dig via mail eller Instagram om du har frågor eller klicka på Mer info om du
           du vill veta mer eller boka en plats till en kurs. Jag ser fram emot att höra från dig!
         </p>
 
@@ -198,7 +198,7 @@
             aria-label="Följ MammaMind på Instagram"
     >
     <img
-            src="/assets/svg/instagram-logo-facebook-2-svgrepo-com.svg"
+            src="/assets/svg/instagram-logo.svg"
             alt=""
             class="social-icon"
     />
