--- a/subpages/privacy.html
+++ b/subpages/privacy.html
@@ -39,16 +39,17 @@
         <h2>
             Senast uppdaterad: januari 2026
         </h2>
-        <h1>
+        <h2>
             MammaMind värnar om din personliga integritet. Denna integritetspolicy förklarar hur
             vi samlar in, använder och skyddar dina personuppgifter i samband med att du anmäler
             intresse för våra kurser.
-        </h1>
+        </h2>
     </div>
 </header>
 <main>
     <div class="container narrow">
-        <h2> 1. Personuppgifter vi samlar in
+        <h2> 1. Personuppgifter vi samlar in</h2>
+        <p>
 
             När du skickar in intresseanmälan via formuläret på webbplatsen kan följande uppgifter behandlas:
 
@@ -57,9 +58,10 @@
             <li><strong>Eventuellt meddelande som du själv väljer att skriva</strong></li>
 
             Vi samlar <strong>endast</strong> in de uppgifter du själv aktivt lämnar
-        </h2>
+        </p>
 
-        <h2> 2. Syfte med insamlingen<br>
+        <h2> 2. Syfte med insamlingen</h2>
+        <p>
 
         De personuppgifter du lämnar används <strong>endast</strong> för följande ändamål
 
@@ -67,18 +69,19 @@
          <li> att kunna kontakta dig via e-post</li>
          <li> att skicka information om kursen (t.ex. betalning, startdatum eller praktiska detaljer)</li>
             Vi använder <strong>inte</strong> dina uppgifter för marknadsföring, nyhetsbrev eller andra ändamål.
-        </h2>
+        </p>
 
-        <h2> 3. Rättslig grund enligt GDPR <br>
-
+        <h2> 3. Rättslig grund enligt GDPR</h2>
+        <p>
         Behandlingen sker med stöd av:
 
         **Samtycke (artikel 6.1 a GDPR)**
 
         Genom att skicka in formuläret samtycker du till att MammaMind behandlar dina uppgifter för ovan angivet syfte.
-        </h2>
+        </p>
 
-        <h2>4. Hur uppgifterna hanteras<br>
+        <h2>4. Hur uppgifterna hanteras</h2>
+        <p>
             Formuläret på webbplatsen hanteras via tjänsten <strong>Formspree</strong>, som används för att ta
             emot och vidarebefordra formulärmeddelanden till MammaMinds e-post.
 
@@ -87,9 +90,10 @@
 
             Du kan läsa mer om Formsprees datalagring & integritetspolicy här:
             <a href="https://formspree.io/legal/privacy-policy" target="_blank" rel="noopener noreferrer">Formspree privacy policy</a>
-        </h2>
+        </p>
 
-        <h2>5. Lagringstid <br>
+        <h2>5. Lagringstid</h2>
+        <p>
 
             Dina personuppgifter sparas endast så länge det behövs för att:
 
@@ -97,17 +101,19 @@
             <li>Fullfölja kontakten kring aktuell kurs</li>
             <li>Skicka ut information kring kommande & pågående kurs</li>
             Uppgifter raderas senast några månader efter senaste kontakt kring kursen.
-        </h2>
+        </p>
 
-        <h2>6. Delning av uppgifter <br>
+        <h2>6. Delning av uppgifter</h2>
+        <p>
 
         Vi delar <strong>inte</strong> dina personuppgifter med tredje part, utöver Formspree
             som teknisk tjänsteleverantör.
 
         Uppgifterna säljs aldrig vidare.
-        </h2>
+        </p>
 
-        <h2>7. Dina rättigheter <br>
+        <h2>7. Dina rättigheter</h2>
+        <p>
 
             Du har enligt GDPR rätt att:
 
@@ -119,21 +125,24 @@
             För att utöva dina rättigheter, kontakta oss via: <a href="mailto:info@mammamind.se" class="footer-email">
                 info@mammamind.se
             </a>
-        </h2>
+        </p>
 
-        <h2>8. Personuppgiftsansvarig <br>
+        <h2>8. Personuppgiftsansvarig</h2>
+        <p>
 
             Personuppgiftsansvarig för behandlingen är:
             E-post: <a href="mailto:info@mammamind.se" class="footer-email">
             info@mammamind.se
         </a>
-        </h2>
+        </p>
 
-        <h2> 9. Ändringar i policyn<br>
+        <h2> 9. Ändringar i policyn</h2>
+        <p>
             Denna integritetspolicy kan komma att uppdateras vid behov. Den senaste versionen finns alltid tillgänglig på webbplatsen.
-        </h2>
+        </p>
 
-        <h2>Tack för ditt förtroende, <br> MammaMind </h2>
+        <h2>Tack för ditt förtroende,</h2>
+        <h3> MammaMind </h3>
 
         <div class="contact-button">
             <a href="/index.html" class="button primary">Tillbaka till startsidan</a>
@@ -141,11 +150,6 @@
     </div>
 </main>
 <footer class="footer-grid">
-
-    <a href="mailto:info@mammamind.se" class="footer-email">
-        info@mammamind.se
-    </a>
-
     <a
             href="https://www.instagram.com/tara_mammamind/"
             target="_blank"
@@ -154,11 +158,15 @@
             aria-label="Följ MammaMind på Instagram"
     >
         <img
-                src="/assets/svg/instagram-logo-facebook-2-svgrepo-com.svg"
+                src="/assets/svg/instagram-logo.svg"
                 alt=""
                 class="social-icon"
         />
         Instagram
+    </a>
+
+    <a href="mailto:info@mammamind.se" class="footer-email">
+        info@mammamind.se
     </a>
 
     <a href="/subpages/privacy.html" class="footer-privacy">
