li elements for course list, info bonustillfälle

--- a/index.html
+++ b/index.html
@@ -121,9 +121,11 @@
       <div class="course-list">
         <article class="course-card">
           <h3>🌿 Trygg återstart efter graviditet</h3>
-          <p>* Varje Torsdag kl. 10:00–11:00</p>
-          <p>* Startdatum: 5 mars 2026</p>
-          <p>* 8 tillfällen</p>
+          <ul class="course-meta">
+            <li>Startdatum: 5 mars 2026</li>
+            <li>Varje Torsdag kl. 10:00–11:00</li>
+            <li>8 tillfällen</li>
+          </ul>
 
           <div class="course-cta">
             <a href="/courses/trygg-aterstart-for-mammor.html" class="button primary">Mer info</a>
@@ -169,8 +171,8 @@
 
         <details>
           <summary>Vad händer om jag missar ett tillfälle?</summary>
-          <p>Om du missar ett tillfälle under kursen finns ett bonustillfälle i slutet av kursen
-            som du kan delta på i mån av plats. På så sätt får du möjlighet att ta igen missade pass.
+          <p>Om du missar ett tillfälle under kursen kommer det finnas ett bonustillfälle i slutet
+            av kursen du kan delta på. På så sätt har du möjlighet att ta igen ett missat pass.
           </p>
         </details>
       </div>
