about-me image styling

--- a/index.html
+++ b/index.html
@@ -105,7 +105,12 @@
         </div>
 
         <div class="image">
-          <img src="assets/images/instructor-about-moi.png" alt="Tara, instruktör för MammaMind">
+          <div class="image-frame">
+            <img
+                    src="assets/images/instructor-about-moi.png"
+                    alt="Tara, instruktör för MammaMind"
+              >
+          </div>
         </div>
       </div>
       </section>
