nbsp proof key elements & mobile style hero-text h1

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -67,7 +67,7 @@
             <ul class="course-meta">
                 <li><strong>Start:</strong> 5 mars</li>
                 <li><strong>Längd:</strong> 8 veckor</li>
-                <li><strong>Dag & Tid:</strong> Torsdagar kl. 10.00-11.00</li>
+                <li><strong>Dag&nbsp;&amp;&nbsp;Tid:</strong> Torsdagar kl.&nbsp;10.00–11.00</li>
                 <li><strong>Plats:</strong> Vila och Värme - yogastudio. Säterigatan 29, Eriksberg</li>
                 <li><strong>Bebisar:</strong> Varmt välkomna</li>
                 <li><strong>Förkunskapskrav:</strong> Efterkontroll genomförd</li>
@@ -80,7 +80,7 @@
             </p>
 
             <p>
-                💛 <em><strong>Early Bird-erbjudande (t.o.m. 10 februari)</strong></em>
+                💛 <em><strong>Early Bird-erbjudande (t.o.m.&nbsp;10&nbsp;februari)</strong></em>
                 Som en extra omtanke till dig som bokar tidigt ingår:
             </p>
             <ul class="early-bird-meta">
@@ -88,7 +88,7 @@
                 <li>Goodiebag med produkter till ett värde av ca 700 kr</li>
             </ul>
             <p>
-                Early bird-pris: <strong>1 795 kr</strong>. Ordinarie pris: <em>2 295 kr</em>
+                Early bird-pris: <strong>1&nbsp;795&nbsp;kr</strong>. Ordinarie pris: <em>2&nbsp;295&nbsp;kr</em>
             Platserna är begränsade för att kunna ge varje mamma en trygg och personlig upplevelse.
             </p>
         </div>
@@ -108,6 +108,8 @@
                         name="_next"
                         value="https://www.mammamind.se/thanks.html"
                 >
+
+                <input type="text" name="_gotcha" style="display:none">
 
                 <div class="form-field">
                     <label for="name">Namn</label>
