--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
         <article class="course-card">
           <h3>🌿 Trygg återstart efter graviditet</h3>
           <ul class="course-meta">
-            <li>Startdatum: 5 mars 2026</li>
-            <li>Varje Torsdag kl. 10:00–11:00</li>
+            <li>Startdatum:&nbsp;5&nbsp;mars&nbsp;2026</li>
+            <li>Varje Torsdag kl.&nbsp;10:00–11:00</li>
             <li>8 tillfällen</li>
           </ul>
 
