--- a/subpages/privacy.html
+++ b/subpages/privacy.html
@@ -37,7 +37,7 @@
 
         <h1> Integritetspolicy – MammaMind </h1>
         <h2>
-            Senast uppdaterad: januari 2026
+            Senast uppdaterad:&nbsp;januari&nbsp;2026
         </h2>
         <h2>
             MammaMind värnar om din personliga integritet. Denna integritetspolicy förklarar hur
