Course button top-margin, general text polishing

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         En plats där du inte behöver bära allt själv, och där det är okej att vara precis där du är.
       </p>
       <p>
-        Låter det intressant? Tveka inte på att kontakta mig för mer info!
+        Låter det intressant? Kolla in aktuella kurser eller kontakta mig direkt för mer info!
       </p>
 
       <div class="contact-button">
@@ -84,48 +84,13 @@
     <hr>
   </div>
 
-    <section class="about about-section">
-      <div class="container split-layout">
-        <div class="text">
-          <h2>Om mig</h2>
-          <p>
-            Jag är mamma till två barn som har förändrat min syn på hälsa, kropp och livet i
-            grunden. De har lärt mig att hälsa inte handlar om prestation – utan om tålamod,
-            nyfikenhet och självomsorg. Under min första graviditet insåg jag hur lite stöd som
-            fanns för trygg träning före och efter förlossning, och hur osäker jag själv kände mig.
-            Det blev startskottet för MammaMind.
-          </p>
-          <p>
-            Med över tio års yogapraktik och utbildningar inom yoga, kost och träning under och
-            efter graviditet erbjuder jag ett inkännande och hållbart stöd. Hos mig får du landa,
-            känna dig sedd och bygga styrka i din egen takt – utan press eller jämförelse. Min
-            önskan är att göra den här omvälvande tiden kring graviditeten lite lättare och att
-            skapa en plats där mammor får mötas, vila och växa – tillsammans.
-          </p>
-        </div>
-
-        <div class="image">
-          <div class="image-frame">
-            <img
-                    src="assets/images/instructor-about-moi.png"
-                    alt="Tara, instruktör för MammaMind"
-              >
-          </div>
-        </div>
-      </div>
-      </section>
-
-  <div class="container">
-    <hr>
-  </div>
-
   <section class="courses" id="courses">
     <div class="container">
       <h2>Aktuella kurser 2026</h2>
 
       <div class="course-list">
+        <h3>🌿 Trygg återstart efter graviditet</h3>
         <article class="course-card">
-          <h3>🌿 Trygg återstart efter graviditet</h3>
           <ul class="course-meta">
             <li>Startdatum:&nbsp;5&nbsp;mars&nbsp;2026</li>
             <li>Varje Torsdag kl.&nbsp;10:00–11:00</li>
@@ -133,13 +98,48 @@
           </ul>
 
           <div class="course-cta">
-            <a href="/courses/trygg-aterstart-for-mammor.html" class="button primary">Mer info</a>
+            <a href="/courses/trygg-aterstart-for-mammor.html" class="button primary">Läs mer om kursen</a>
           </div>
 
         </article>
       </div>
     </div>
-    </section>
+  </section>
+
+  <div class="container">
+    <hr>
+  </div>
+
+  <section class="about about-section">
+    <div class="container split-layout">
+      <div class="text">
+        <h2>Om mig</h2>
+        <p>
+          Jag är mamma till två barn som har förändrat min syn på hälsa, kropp och livet i
+          grunden. De har lärt mig att hälsa inte handlar om prestation – utan om tålamod,
+          nyfikenhet och självomsorg. Under min första graviditet insåg jag hur lite stöd som
+          fanns för trygg träning före och efter förlossning, och hur osäker jag själv kände mig.
+          Det blev startskottet för MammaMind.
+        </p>
+        <p>
+          Med över tio års yogapraktik och utbildningar inom yoga, kost och träning under och
+          efter graviditet erbjuder jag ett inkännande och hållbart stöd. Hos mig får du landa,
+          känna dig sedd och bygga styrka i din egen takt – utan press eller jämförelse. Min
+          önskan är att göra den här omvälvande tiden kring graviditeten lite lättare och att
+          skapa en plats där mammor får mötas, vila och växa – tillsammans.
+        </p>
+      </div>
+
+      <div class="image">
+        <div class="image-frame">
+          <img
+                  src="assets/images/instructor-about-moi.png"
+                  alt="Tara, instruktör för MammaMind"
+            >
+        </div>
+      </div>
+    </div>
+  </section>
 
   <div class="container">
     <hr>
@@ -185,8 +185,9 @@
       <div class="contact">
         <h2>Kontakta mig</h2>
         <p>
-          Hör gärna av dig via mail eller Instagram om du har frågor eller klicka på Mer info om du
-          du vill veta mer eller boka en plats till en kurs. Jag ser fram emot att höra från dig!
+          Har du frågor eller funderingar hör gärna av dig via mail eller MammaMind's Instagram.
+          Vill du boka en plats till en kurs så klicka dig in på <i>Läs mer om kursen</i> så hittar du all information där.
+          Jag ser fram emot att höra från dig!
         </p>
 
 
