--- a/subpages/privacy.html
+++ b/subpages/privacy.html
@@ -35,7 +35,7 @@
             </div>
         </a>
 
-        <h1> Integritetspolicy – MammaMind </h1>
+        <h1> Integritetspolicy</h1>
         <h2>
             Senast uppdaterad:&nbsp;januari&nbsp;2026
         </h2>
@@ -67,8 +67,8 @@
 
          <li> att bekräfta din intresseanmälan</li>
          <li> att kunna kontakta dig via e-post</li>
-         <li> att skicka information om kursen (t.ex. betalning, startdatum eller praktiska detaljer)</li>
-            Vi använder <strong>inte</strong> dina uppgifter för marknadsföring, nyhetsbrev eller andra ändamål.
+         <li> att skicka information om kursen t.ex. betalning eller andra praktiska detaljer inför och under kursen</li>
+            <br>Vi använder <strong>inte</strong> dina uppgifter för marknadsföring, nyhetsbrev eller andra ändamål du inte har gett samtycke till.
         </p>
 
         <h2> 3. Rättslig grund enligt GDPR</h2>
