--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -81,11 +81,11 @@
 
             <p>
                 💛 <em><strong>Early Bird-erbjudande (t.o.m.&nbsp;10&nbsp;februari)</strong></em>
-                Som en extra omtanke till dig som bokar tidigt ingår:
+                Som en extra omtanke till dig som bokar tidigt bjuder vi på:
             </p>
             <ul class="early-bird-meta">
-                <li>500 kr rabatt</li>
                 <li>Goodiebag med produkter till ett värde av ca 700 kr</li>
+                <li>Rabatterat pris på kursen med 500&nbsp;kr</li>
             </ul>
             <p>
                 Early bird-pris: <strong>1&nbsp;795&nbsp;kr</strong>. Ordinarie pris: <em>2&nbsp;295&nbsp;kr</em>
