Html scroll smooth, hero arrow down button

--- a/index.html
+++ b/index.html
@@ -43,8 +43,23 @@
       </p>
     </div>
 
-    <div class="hero-button-mobile">
-      <a href="#courses" class="button primary">Se aktuella kurser</a>
+    <div class="hero-scroll-indicator">
+      <a href="#courses" aria-label="Scroll till aktuella kurser">
+        <svg
+                class="scroll-arrow"
+                viewBox="0 0 24 24"
+                fill="none"
+                aria-hidden="true"
+        >
+          <path
+                  d="M6 9l6 6 6-6"
+                  stroke="currentColor"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+          />
+        </svg>
+      </a>
     </div>
 
   </div>
