--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -98,6 +98,7 @@
 
         <section class="interest-form">
             <h2>Anmäl intresse</h2>
+            <p><em>ej bindande, först när betalningen tagits emot är platsen bokad</em></p>
 
             <form action="https://formspree.io/f/meeejgpw"
                   method="POST"
@@ -170,7 +171,7 @@
     </div>
 </main>
 
-<footer class="footer-grid">
+<footer class="footer-grid">§
     <a
             href="https://www.instagram.com/tara_mammamind/"
             target="_blank"
