--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -171,7 +171,7 @@
     </div>
 </main>
 
-<footer class="footer-grid">§
+<footer class="footer-grid">
     <a
             href="https://www.instagram.com/tara_mammamind/"
             target="_blank"
