replace AboutMe picture -> MammaMind training

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       <div class="image">
         <div class="image-frame">
           <img
-                  src="assets/images/instructor-about-moi.png"
+                  src="/assets/images/MammaMind_training.jpg"
                   alt="Tara, instruktör för MammaMind"
             >
         </div>
@@ -201,6 +201,8 @@
         <h2>Kontakta mig</h2>
         <p>
           Har du frågor eller funderingar hör gärna av dig via mail eller MammaMind's Instagram.
+        </p>
+        <p>
           Vill du boka en plats till en kurs så klicka dig in på <i>Läs mer om kursen</i> så hittar du all information där.
           Jag ser fram emot att höra från dig!
         </p>
