add email icon & update fill to currentColor for logo icon, adds email & insta icon in bottom at Varför MammaMind

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <link rel="stylesheet" href="/styles/hero.css" />
   <link rel="stylesheet" href="/styles/logo.css" />
   <link rel="stylesheet" href="/styles/footer.css" />
+  <link rel="stylesheet" href="/styles/icons.css" />
 </head>
 
 <body>
@@ -87,11 +88,30 @@
         Låter det intressant? Kolla in aktuella kurser eller kontakta mig direkt för mer info!
       </p>
 
-      <div class="contact-button">
-          <a class ="button primary" href="mailto:info@mammamind.se">
-            Skicka mail
-          </a>
+      <div class="contact-icons">
+
+        <a
+                href="https://www.instagram.com/tara_mammamind/"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="icon-link"
+                aria-label="Följ MammaMind på Instagram"
+        >
+          <img src="/assets/svg/instagram-logo.svg" alt="" />
+          <span>@tara_mammamind</span>
+        </a>
+
+        <a
+                href="mailto:info@mammamind.se"
+                class="icon-link"
+                aria-label="Maila MammaMind"
+        >
+          <img src="/assets/svg/email.svg" alt="" />
+          <span>info@mammamind.se</span>
+        </a>
+
       </div>
+
     </div>
   </section>
 
