Add Terms & Conditions, update FAQ list & footer entry

--- a/subpages/thanks.html
+++ b/subpages/thanks.html
@@ -75,6 +75,10 @@
                 Integritetspolicy
             </a>
 
+            <a href="/subpages/termnsnconditions.html" class="footer-terms">
+                Allmänna vilkor
+            </a>
+
             <p class="footer-copy">
                 © 2026 · MammaMind
             </p>
