Add Terms & Conditions & update FAQ list

--- a/index.html
+++ b/index.html
@@ -215,6 +215,23 @@
             av kursen du kan delta på. På så sätt har du möjlighet att ta igen ett missat pass.
           </p>
         </details>
+
+        <details>
+          <summary>Har jag bokat en plats när jag skickar in intreseanmälan?</summary>
+          <p>När du skickar in intresseanmälan har du ännu inte bokat en plats.
+            Inom 48 timmar får du ett bekräftelsemail med mer information om kursen och betalningen.
+            Din plats är garanterad först när betalningen är genomförd.
+          </p>
+        </details>
+
+        <details>
+          <summary>Vad händer om ett pass blir inställt?</summary>
+          <p>Se <a href="/subpages/termnsnconditions.html">Allmänna vilkor</a> för MammaMind,
+            här har vi samlat allt du behöver veta kring bokning, avbokning och återbetalning vid
+            oförutsedda händelser.
+          </p>
+        </details>
+
       </div>
 
       <div class="contact">
