add instructor image in thanks page

--- a/subpages/thanks.html
+++ b/subpages/thanks.html
@@ -43,6 +43,15 @@
             <div class="container narrow">
             <h2>Ett bekräftelsemail med mer info om kursen och betalningen skickar jag inom
                 48 timmar.</h2>
+                <div class="image-thanks">
+                    <div class="image-frame-thanks">
+                        <img
+                                src="/assets/images/instructor-about-moi.png"
+                                alt="Tara, instruktör för MammaMind"
+                        >
+                    </div>
+                </div>
+
                 <h3> Varma hälsningar, <br>
                     Tara - MammaMind</h3>
                 <div class="contact-button">
