--- a/subpages/termnsnconditions.html
+++ b/subpages/termnsnconditions.html
@@ -64,8 +64,11 @@
 
         <h2> 3. Ångerrätt</h2>
         <p>
-            Ångerrätt enligt <a href="https://lagen.nu/2005:59#K2P11S1">distansavtalslagen (1 kap. 2 §)</a>
-            gäller <strong>inte</strong> vid köp av kursplats, då bokningen avser en tidsbestämd gruppaktivitet.
+            Enligt distansavtalslagen (2005:59) gäller inte ångerätt vid köp av tjänster som avser fritidsverksamhet där tjänsten ska tillhandahållas på en bestämd dag eller inom en bestämd tidsperiod
+            <a href="https://lagen.nu/2005:59#K2P11S1">distansavtalslagen (2 kap. 11 §).</a>
+        </p>
+        <p>
+            MammaMind's kurser är tidsbestämda gruppaktiviteter med fast startdatum och omfattas därför <strong>inte</strong> av ångerrätt.
         </p>
 
         <h2>4. Avbokning & återbetalning</h2>
