FAQ text polish, termsNconditions 3.  url update, Form heading polish

--- a/index.html
+++ b/index.html
@@ -217,18 +217,23 @@
         </details>
 
         <details>
-          <summary>Har jag bokat en plats när jag skickar in intreseanmälan?</summary>
-          <p>När du skickar in intresseanmälan har du ännu inte bokat en plats.
-            Inom 48 timmar får du ett bekräftelsemail med mer information om kursen och betalningen.
-            Din plats är garanterad först när betalningen är genomförd.
+          <summary>Vad händer efter att jag skickat in en intresseanmälan? </summary>
+          <p>Kul att du vill veta mer!</p>
+          <p>När du skickat in din intresseanmälan (ej bindande) kommer du få ett bekräftelsemail inom
+            48 timmar där du hittar mer information om kursen och hur betalningen ska ske.
+            Din plats är bokad först när betalningen är genomförd.
           </p>
         </details>
 
         <details>
           <summary>Vad händer om ett pass blir inställt?</summary>
-          <p>Se <a href="/subpages/termnsnconditions.html">Allmänna vilkor</a> för MammaMind,
+          <p>
+          Vid inställt tillfälle erbjuds ersättningstillfälle för att kompensera ett inställt pass.
+          </p>
+          <p>
+          Se <a href="/subpages/termnsnconditions.html">Allmänna vilkor</a> för MammaMind,
             här har vi samlat allt du behöver veta kring bokning, avbokning och återbetalning vid
-            oförutsedda händelser.
+            oförutsedda händelser etc.
           </p>
         </details>
 
