--- a/subpages/termnsnconditions.html
+++ b/subpages/termnsnconditions.html
@@ -65,7 +65,7 @@
         <h2> 3. Ångerrätt</h2>
         <p>
             Enligt distansavtalslagen (2005:59) gäller inte ångerätt vid köp av tjänster som avser fritidsverksamhet där tjänsten ska tillhandahållas på en bestämd dag eller inom en bestämd tidsperiod
-            <a href="https://lagen.nu/2005:59#K2P11S1">distansavtalslagen (2 kap. 11 §).</a>
+            <a href="https://www.riksdagen.se/sv/dokument-och-lagar/dokument/svensk-forfattningssamling/lag-200559-om-distansavtal-och-avtal-utanfor_sfs-2005-59/#K1">distansavtalslagen (2 kap. 11 §).</a>
         </p>
         <p>
             MammaMind's kurser är tidsbestämda gruppaktiviteter med fast startdatum och omfattas därför <strong>inte</strong> av ångerrätt.
@@ -77,6 +77,9 @@
         </p>
         <p>
             Vid avbokning  <strong>senare än 14 dagar före kursstart </strong>, eller vid utebliven närvaro, återbetalas inte kursavgiften.
+        </p>
+        <p>
+            Vid särskilda omständigheter kan återbetalning eller ombokning ske efter dialog.
         </p>
 
         <h2>5. Missade tillfällen</h2>
