--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -98,7 +98,7 @@
 
         <section class="interest-form">
             <h2>Anmäl intresse</h2>
-            <p><em>ej bindande, först när betalningen tagits emot är platsen bokad</em></p>
+            <p><em>ej bindande</em></p>
 
             <form action="https://formspree.io/f/meeejgpw"
                   method="POST"
