add workshop subpage and connect from main

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="hero-scroll-indicator">
-      <a href="#courses" aria-label="Scroll till aktuella kurser">
+      <a href="#workshops" aria-label="Scroll till aktuella kurser">
         <svg
                 class="scroll-arrow"
                 viewBox="0 0 24 24"
@@ -112,6 +112,33 @@
 
       </div>
 
+    </div>
+  </section>
+
+  <div class="container">
+    <hr>
+  </div>
+
+  <section class="courses" id="workshops">
+    <div class="container">
+      <h2>Prova på workshop</h2>
+
+      <div class="course-list">
+        <h3>Stark & smärtfri vardag: Fokus på Bäckenbotten & Andning</h3>
+        <article class="course-card">
+          <ul class="course-meta">
+            <li>Datum:&nbsp;10&nbsp;februari&nbsp;2026</li>
+            <li>Tid kl.&nbsp;10:00– ca 11:30 (inkl. fika)</li>
+            <li>Plats: Vila och värme yogastudio, Säterigatan 29 Eriksberg</li>
+            <li>Gratis prova på, anmäl intresse - först till kvarn!</li>
+          </ul>
+
+          <div class="course-cta">
+            <a href="/courses/workshop-smartfri-vardag.html" class="button primary">Läs mer om workshopen</a>
+          </div>
+
+        </article>
+      </div>
     </div>
   </section>
 
