--- a/subpages/thanks.html
+++ b/subpages/thanks.html
@@ -28,11 +28,13 @@
     <body>
         <header class="hero thank-you">
             <div class="container hero-layout">
-                <div class="hero-logo">
-                    <img src="/assets/svg/mamma_mind_logo_combined.svg"
-                         alt="Mamma Mind"
-                         class="logo">
-                </div>
+                <a href="/index.html" class="logo-link">
+                    <div class="hero-logo">
+                        <img src="/assets/svg/mamma_mind_logo_combined.svg"
+                             alt="Mamma Mind"
+                             class="logo">
+                    </div>
+                </a>
 
                 <h1>Tack för din intresseanmälan och varmt välkommen till MammaMind🌸</h1>
 
@@ -41,8 +43,9 @@
 
         <main>
             <div class="container narrow">
-            <h2>Ett bekräftelsemail med mer info om kursen och betalningen skickar jag inom
-                48 timmar.</h2>
+            <h2>Ett bekräftelsemail med mer info om workshopen/kursen du anmält dig till skickar jag inom
+                48 timmar!</h2>
+                <p>För dig som anmält intresse för en kurs kommer all info om betalning också finnas med i bekräftelsemailet.</p>
                 <div class="image-thanks">
                     <div class="image-frame-thanks">
                         <img
