FAQ intresseanmaälan course clarification

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         </details>
 
         <details>
-          <summary>Vad händer efter att jag skickat in en intresseanmälan? </summary>
+          <summary>Vad händer efter att jag skickat in en intresseanmälan till en kurs? </summary>
           <p>Kul att du vill veta mer!</p>
           <p>När du skickat in din intresseanmälan (ej bindande) kommer du få ett bekräftelsemail inom
             48 timmar där du hittar mer information om kursen och hur betalningen ska ske.
