spam folder reminder polish

--- a/index.html
+++ b/index.html
@@ -244,12 +244,14 @@
         </details>
 
         <details>
-          <summary>Vad händer efter att jag skickat in en intresseanmälan till en kurs? </summary>
+          <summary>Vad händer efter att jag skickat in en intresseanmälan till en workshop/kurs? </summary>
           <p>Kul att du vill veta mer!</p>
           <p>När du skickat in din intresseanmälan (ej bindande) kommer du få ett bekräftelsemail inom
-            48 timmar där du hittar mer information om kursen och hur betalningen ska ske.
+            48 timmar där du hittar mer information om workshopen/kursen.
+          <br>
+            För dig som anmält intresse för en kurs kommer all info om betalning också finnas med i bekräftelsemailet.
             Din plats är bokad först när betalningen är genomförd.
-          </p>
+          <p><em> Om mailet inte dyker upp, vänligen kolla i din skräppost eller fliken kampanjer/promotions om du använder Gmail</em></p>
         </details>
 
         <details>
