--- a/subpages/thanks.html
+++ b/subpages/thanks.html
@@ -46,7 +46,7 @@
             <h2>Ett bekräftelsemail med mer info om workshopen/kursen du anmält dig till skickar jag inom
                 48 timmar!</h2>
                 <p>För dig som anmält intresse för en kurs kommer all info om betalning också finnas med i bekräftelsemailet.</p>
-                <p><strong> Vänligen kolla i din Skräppost om mailet inte dyker upp</strong></p>
+                <p><em> Om mailet inte dyker upp, vänligen kolla i din skräppost eller fliken kampanjer/promotions om du använder Gmail</em></p>
                 <div class="image-thanks">
                     <div class="image-frame-thanks">
                         <img
