Remove early-bird info & change place of course and workshop

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -78,18 +78,11 @@
                 egen takt. Efter passet finns möjlighet att stanna kvar
                 för fika och umgänge om man vill.
             </p>
-
             <p>
-                💛 <em><strong>Early Bird-erbjudande (t.o.m.&nbsp;10&nbsp;februari)</strong></em>
-                Som en extra omtanke till dig som bokar tidigt bjuder vi på:
+                Pris: <em>2&nbsp;295&nbsp;kr</em>
             </p>
-            <ul class="early-bird-meta">
-                <li>Goodiebag med produkter till ett värde av ca 700 kr</li>
-                <li>Rabatterat pris på kursen med 500&nbsp;kr</li>
-            </ul>
             <p>
-                Early bird-pris: <strong>1&nbsp;795&nbsp;kr</strong>. Ordinarie pris: <em>2&nbsp;295&nbsp;kr</em>
-            Platserna är begränsade för att kunna ge varje mamma en trygg och personlig upplevelse.
+                Platserna är begränsade för att kunna ge varje mamma en trygg och personlig upplevelse
             </p>
         </div>
     </section>
