--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
 
     <div class="hero-scroll-indicator">
-      <a href="#workshops" aria-label="Scroll till aktuella kurser">
+      <a href="#courses" aria-label="Scroll till aktuella kurser">
         <svg
                 class="scroll-arrow"
                 viewBox="0 0 24 24"
@@ -119,6 +119,32 @@
     <hr>
   </div>
 
+  <section class="courses" id="courses">
+    <div class="container">
+      <h2>Aktuella kurser 2026</h2>
+
+      <div class="course-list">
+        <h3>🌿 Trygg återstart efter graviditet</h3>
+        <article class="course-card">
+          <ul class="course-meta">
+            <li>Startdatum:&nbsp;5&nbsp;mars&nbsp;2026</li>
+            <li>Varje Torsdag kl.&nbsp;10:00–11:00</li>
+            <li>8 tillfällen</li>
+          </ul>
+
+          <div class="course-cta">
+            <a href="/courses/trygg-aterstart-for-mammor.html" class="button primary">Läs mer om kursen</a>
+          </div>
+
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <div class="container">
+    <hr>
+  </div>
+
   <section class="courses" id="workshops">
     <div class="container">
       <h2>Prova på workshop</h2>
@@ -135,32 +161,6 @@
 
           <div class="course-cta">
             <a href="/courses/workshop-smartfri-vardag.html" class="button primary">Läs mer om workshopen</a>
-          </div>
-
-        </article>
-      </div>
-    </div>
-  </section>
-
-  <div class="container">
-    <hr>
-  </div>
-
-  <section class="courses" id="courses">
-    <div class="container">
-      <h2>Aktuella kurser 2026</h2>
-
-      <div class="course-list">
-        <h3>🌿 Trygg återstart efter graviditet</h3>
-        <article class="course-card">
-          <ul class="course-meta">
-            <li>Startdatum:&nbsp;5&nbsp;mars&nbsp;2026</li>
-            <li>Varje Torsdag kl.&nbsp;10:00–11:00</li>
-            <li>8 tillfällen</li>
-          </ul>
-
-          <div class="course-cta">
-            <a href="/courses/trygg-aterstart-for-mammor.html" class="button primary">Läs mer om kursen</a>
           </div>
 
         </article>
