--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -82,8 +82,12 @@
                 Pris: <em>2&nbsp;295&nbsp;kr</em>
             </p>
             <p>
-                Platserna är begränsade för att kunna ge varje mamma en trygg och personlig upplevelse
+                Platserna är begränsade för att kunna ge varje mamma en trygg och personlig upplevelse.
+                <br>Till alla som bokar ingår också:
             </p>
+            <ul class="early-bird-meta">
+                <li>Goodiebag med produkter till ett värde av ca 700 kr</li>
+            </ul>
         </div>
     </section>
 
