Add workshop completed description

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         En plats där du inte behöver bära allt själv, och där det är okej att vara precis där du är.
       </p>
       <p>
-        Låter det intressant? Kolla in aktuella kurser eller kontakta mig direkt för mer info!
+        Låter det intressant? Kolla in aktuella kurser och workshops eller kontakta mig direkt för mer info!
       </p>
 
       <div class="contact-icons">
@@ -158,6 +158,9 @@
             <li>Plats: Vila och värme yogastudio, Säterigatan 29 Eriksberg</li>
             <li>Gratis prova på, anmäl intresse - först till kvarn!</li>
           </ul>
+
+          <p class="workshop-complete-description">
+          <em>Redan genomförd workshop, men det kommer snart flera prova på-tillfällen!</em>
 
           <div class="course-cta">
             <a href="/courses/workshop-smartfri-vardag.html" class="button primary">Läs mer om workshopen</a>
