Fix workshop description typo

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </ul>
 
           <p class="workshop-complete-description">
-          <em>Redan genomförd workshop, men det kommer snart flera prova på-tillfällen!</em>
+          <em>Redan genomförd workshop, men snart kommer det flera prova-på tillfällen!</em>
 
           <div class="course-cta">
             <a href="/courses/workshop-smartfri-vardag.html" class="button primary">Läs mer om workshopen</a>
