Last minute-price update in course trygg-aterstart

--- a/courses/trygg-aterstart-for-mammor.html
+++ b/courses/trygg-aterstart-for-mammor.html
@@ -79,15 +79,15 @@
                 för fika och umgänge om man vill.
             </p>
             <p>
-                Pris: <em>2&nbsp;295&nbsp;kr</em>
-            </p>
-            <p>
-                Platserna är begränsade för att kunna ge varje mamma en trygg och personlig upplevelse.
-                <br>Till alla som bokar ingår också:
+                Till alla som bokar bjuder vi på:
             </p>
             <ul class="early-bird-meta">
-                <li>Goodiebag med produkter till ett värde av ca 700 kr</li>
+                <li>Goodiebag med produkter till ett värde av ca 700 kr!</li>
             </ul>
+            <p>
+                Sista minuten-pris: <strong><em>1&nbsp;795&nbsp;kr</em></strong> - ordinarie pris <em>2&nbsp;295&nbsp;kr</em>.
+                Platserna är begränsade för att kunna ge varje mamma en trygg och personlig upplevelse.
+            </p>
         </div>
     </section>
 
